{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 172,
  "lineage": "5694ffdd-32f3-c9cf-01f5-e214a4a45da9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "team2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f76eb6613f291867",
            "arn": "arn:aws:ec2:us-east-2:637423483309:elastic-ip/eipalloc-0f76eb6613f291867",
            "domain": "vpc",
            "id": "eipalloc-0f76eb6613f291867",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-141-213-225.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.213.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "team2-eip"
            },
            "tags_all": {
              "Name": "team2-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:internet-gateway/igw-045e8091e6d1c8d47",
            "id": "igw-045e8091e6d1c8d47",
            "owner_id": "637423483309",
            "tags": {
              "Name": "team2-igw"
            },
            "tags_all": {
              "Name": "team2-igw"
            },
            "vpc_id": "vpc-075b83101bf801f42"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "team2_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f76eb6613f291867",
            "association_id": "eipassoc-012ec0926438bada6",
            "connectivity_type": "public",
            "id": "nat-0fd7fd9ea5f053ff5",
            "network_interface_id": "eni-0c57cb678f49919e9",
            "private_ip": "10.0.1.40",
            "public_ip": "3.141.213.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04f4bf279738e2fd5",
            "tags": {
              "Name": "team2-nat-gateway"
            },
            "tags_all": {
              "Name": "team2-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_subnet.team2_public_subnet",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team2_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:route-table/rtb-024511636209cdf71",
            "id": "rtb-024511636209cdf71",
            "owner_id": "637423483309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd7fd9ea5f053ff5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team2-private-rt"
            },
            "tags_all": {
              "Name": "team2-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b83101bf801f42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_nat_gateway.team2_nat_gateway",
            "aws_subnet.team2_public_subnet",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team2_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:route-table/rtb-029b590dfe1b4d930",
            "id": "rtb-029b590dfe1b4d930",
            "owner_id": "637423483309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045e8091e6d1c8d47",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team2-public-rt"
            },
            "tags_all": {
              "Name": "team2-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b83101bf801f42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team2_igw",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e05a9c008bbb4b7",
            "route_table_id": "rtb-024511636209cdf71",
            "subnet_id": "subnet-0aa2ff73014e3db63"
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_nat_gateway.team2_nat_gateway",
            "aws_route_table.team2_private_rt",
            "aws_subnet.team2_private_subnet",
            "aws_subnet.team2_public_subnet",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081461c81a995f19f",
            "route_table_id": "rtb-029b590dfe1b4d930",
            "subnet_id": "subnet-04f4bf279738e2fd5"
          },
          "dependencies": [
            "aws_internet_gateway.team2_igw",
            "aws_route_table.team2_public_rt",
            "aws_subnet.team2_public_subnet",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:security-group/sg-085e4977fc2dcd073",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085e4977fc2dcd073",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2024080606553537800000000a",
            "name_prefix": "terraform-",
            "owner_id": "637423483309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nodes-sg"
            },
            "tags_all": {
              "Name": "eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b83101bf801f42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:subnet/subnet-0aa2ff73014e3db63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa2ff73014e3db63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423483309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-private-subnet"
            },
            "tags_all": {
              "Name": "team2-private-subnet"
            },
            "vpc_id": "vpc-075b83101bf801f42"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:subnet/subnet-04f4bf279738e2fd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f4bf279738e2fd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423483309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-public-subnet"
            },
            "tags_all": {
              "Name": "team2-public-subnet"
            },
            "vpc_id": "vpc-075b83101bf801f42"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423483309:vpc/vpc-075b83101bf801f42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a81579ecbc0361df",
            "default_route_table_id": "rtb-0ff3f69a9b73a2c52",
            "default_security_group_id": "sg-0d07ddcd13f89f57a",
            "dhcp_options_id": "dopt-0ec710bdd490c23a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075b83101bf801f42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff3f69a9b73a2c52",
            "owner_id": "637423483309",
            "tags": {
              "Name": "team2-vpc"
            },
            "tags_all": {
              "Name": "team2-vpc"
            }
          }
        }
      ]
    }
  ]
}